refactore(): limit autogenerated models usage to controller layer
